# Pyside6-GUI

./: .gitignore  README.md  README_DEPLOY.md  app.spec  aws_app.spec  build.py  build_aws.py  deploy.py  main.py  package.py  package_aws.py  pyproject.toml  requirements.txt  run_gui_module.py  s3_manager.py
.github/workflows/: build-aws-app-uv.yml  build-aws-app.yml
aws/: README_GUI.md  SETUP_GUIDE.md  __init__.py  aws_manager.py  config.json  create_GSI.py  create_value_for_GSI.py  gui_main.py  image_cache.py  initial_upload.py  readme.md  requirements.txt  run_setup.py  setup_aws_infrastructure.py
aws/widgets/: category_selection_dialog.py  curation_confirm_dialog.py  image_viewer_dialog.py  image_widgets.py  main_image_viewer.py  pass_reason_dialog.py  product_list_widget.py  representative_panel.py
boto3/: aws_manager.py  dynamodb_manager.py  readme.md  run_setup.py  setup_aws_infrastructure.py
widgets/: image_grid.py  image_label.py  image_viewer.py  keyboard_navigation.py  project_tree.py  representative_panel.py  workspace_panel.py
