[project]
name = "pyside6-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.44",
    "pillow>=11.3.0",
    "pyside6>=6.9.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.1",
]
